# omniprompt

./: .gitignore  MANIFEST.in  README.md  config.yaml  omniprompt.py  pyproject.toml  requirements.txt
src/omniprompt/: cli.py
tests/: test_config.py  test_providers.py  test_utils.py
